gen3/kustomize/revproxy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    meta.helm.sh/release-name: gen3-dev
    meta.helm.sh/release-namespace: default
    nginx.ingress.kubernetes.io/rewrite-target: /
  creationTimestamp: "2023-12-11T21:35:12Z"
  generation: 3
  labels:
    app.kubernetes.io/managed-by: Helm
  name: revproxy-dev
  namespace: default
  resourceVersion: "258794"
  uid: 5d883481-7cb1-4598-9d04-a2c5f4f82038
spec:
  ingressClassName: nginx
  rules:
  - host: cloud08
    http:
      paths:
      - backend:
          service:
            name: revproxy-service
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: revproxy-service
            port:
              number: 443
        path: /
        pathType: Prefix
  tls:
  - secretName: gen3-certs
